--- a/app/assets/stylesheets/globals/colors.css.scss
+++ b/app/assets/stylesheets/globals/colors.css.scss
@@ -1,13 +1,1 @@
-// Stock Sales color palette.
-$dark-blue: #063763;
-$med-blue: #5174B4;
-$light-blue: #DEE5F0;
-$light-green: #BDBA21;
-$orange: #EA6014;
-
-$almost-white: #F5F5F5;
-$pale-grey: #EEE;
-$light-grey: #D1D3D4;
-
-// Reassign sass color variables from imported styles to our color palette.
-$body-bg: $dark-blue; // from Blacklight
+$dark-blue: #1A385C;
