--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,4 +2,27 @@
   <%= t('blacklight.application_name') %>
 <% end %>
 
-TODO
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12">
+      Carousel: TODO
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4">
+      <h2 class="text-center"><%= link_to(t('series'), '/TODO') %></h2>
+      <div>TODO: Lorem Ipsum</div>
+    </div>
+
+    <div class="col-md-4">
+      <h2 class="text-center"><%= link_to(t('exhibits'), '/TODO') %></h2>
+      <div>TODO: Lorem Ipsum</div>
+    </div>
+
+    <div class="col-md-4">
+      <h2 class="text-center"><%= link_to(t('collections'), '/TODO') %></h2>
+      <div>TODO: Lorem Ipsum</div>
+    </div>
+  </div>
+</div>
