--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,20 +1,22 @@
-<nav id="footer" class="container-fluid">
-  <ul class="col-md-4">
-    <li><%= link_to('WGBH Series', '/TODO') %></li>
-    <li><%= link_to('Scholar Exhibits', '/TODO') %></li>
-    <li><%= link_to('Special Collections', '/TODO') %></li>
-  </ul>
-  <ul class="col-md-3">
-    <li><%= link_to('About Us', '/TODO') %></li>
-    <li><%= link_to('Blog', '/TODO') %></li>
-    <li><%= link_to('Contact Us', '/TODO') %></li>
-    <li><%= link_to('Help', '/TODO') %></li>
-    <li><%= link_to('Credits', '/TODO') %></li>
-    <li><%= link_to('Privacy Policy', '/TODO') %></li>
-    <li><%= link_to('Terms and Conditions', '/TODO') %></li>
-    <li><%= link_to('Visiting the Archives', '/TODO') %></li>
-  </ul>
-  <div class="col-md-5">
-    Copyright 2015 WGBH Educational Foundation. All rights reserved.
+<div id="footer" class="container-fluid">
+  <div class="row">
+    <ul class="col-md-4">
+      <p><%= link_to(t('series'), '/TODO') %></p>
+      <p><%= link_to(t('exhibits'), '/TODO') %></p>
+      <p><%= link_to(t('collections'), '/TODO') %></p>
+    </ul>
+    <ul class="col-md-3">
+      <p><%= link_to('About Us', '/TODO') %></p>
+      <p><%= link_to('Blog', '/TODO') %></p>
+      <p><%= link_to('Contact Us', '/TODO') %></p>
+      <p><%= link_to('Help', '/TODO') %></p>
+      <p><%= link_to('Credits', '/TODO') %></p>
+      <p><%= link_to('Privacy Policy', '/TODO') %></p>
+      <p><%= link_to('Terms and Conditions', '/TODO') %></p>
+      <p><%= link_to('Visiting the Archives', '/TODO') %></p>
+    </ul>
+    <div class="col-md-5">
+      Copyright 2015 WGBH Educational Foundation. All rights reserved.
+    </div>
   </div>
-</nav>    
+</div>    
