--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -1,9 +1,15 @@
-<nav id="header" class="container-fluid">
-  <div class="col-md-6">
-    <p>TODO: logo</p>
-    <p>TODO: search</p>
+<div id="header" class="container-fluid">
+  <div class="row">
+    <div class="col-md-6">
+      <p>TODO: logo</p>
+    </div>
   </div>
-  <div class="col-md-2"><%= link_to('WGBH Series', '/TODO') %></div>
-  <div class="col-md-2"><%= link_to('Scholar Exhibits', '/TODO') %></div>
-  <div class="col-md-2"><%= link_to('Special Collections', '/TODO') %></div>
-</nav> 
+  <div class="row">
+    <div class="col-md-6">
+      <p>TODO: search</p>
+    </div>
+    <div class="col-md-2"><%= link_to(t('series'), '/TODO') %></div>
+    <div class="col-md-2"><%= link_to(t('exhibits'), '/TODO') %></div>
+    <div class="col-md-2"><%= link_to(t('collections'), '/TODO') %></div>
+  </div>
+</div> 
