--- a/app/assets/stylesheets/locals/header.css.scss
+++ b/app/assets/stylesheets/locals/header.css.scss
@@ -1,7 +1,4 @@
 #header {
-    background: #1A385C;
-    color: #FFF;
-    a {
-        color: #FFF;
-    }
+    background: $dark-blue;
+    &, a { color: #FFF; }
 }
