--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,17 +11,17 @@
 
   <div class="row">
     <div class="col-md-4">
-      <h2 class="text-center"><%= link_to(t('series'), '/TODO') %></h2>
+      <h2 class="text-center"><%= link_to(t('series'), '/series') %></h2>
       <div>TODO: Lorem Ipsum</div>
     </div>
 
     <div class="col-md-4">
-      <h2 class="text-center"><%= link_to(t('exhibits'), '/TODO') %></h2>
+      <h2 class="text-center"><%= link_to(t('exhibits'), '/exhibits') %></h2>
       <div>TODO: Lorem Ipsum</div>
     </div>
 
     <div class="col-md-4">
-      <h2 class="text-center"><%= link_to(t('collections'), '/TODO') %></h2>
+      <h2 class="text-center"><%= link_to(t('collections'), '/collections') %></h2>
       <div>TODO: Lorem Ipsum</div>
     </div>
   </div>
