--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,9 @@
 <div id="footer" class="container-fluid">
   <div class="row">
     <ul class="col-md-4">
-      <p><%= link_to(t('series'), '/TODO') %></p>
-      <p><%= link_to(t('exhibits'), '/TODO') %></p>
-      <p><%= link_to(t('collections'), '/TODO') %></p>
+      <p><%= link_to(t('series'), '/series') %></p>
+      <p><%= link_to(t('exhibits'), '/exhibits') %></p>
+      <p><%= link_to(t('collections'), '/collections') %></p>
     </ul>
     <ul class="col-md-3">
       <p><%= link_to('About Us', '/TODO') %></p>
