--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -8,8 +8,8 @@
     <div class="col-md-6">
       <p>TODO: search</p>
     </div>
-    <div class="col-md-2"><%= link_to(t('series'), '/TODO') %></div>
-    <div class="col-md-2"><%= link_to(t('exhibits'), '/TODO') %></div>
-    <div class="col-md-2"><%= link_to(t('collections'), '/TODO') %></div>
+    <div class="col-md-2"><%= link_to(t('series'), '/series') %></div>
+    <div class="col-md-2"><%= link_to(t('exhibits'), '/exhibits') %></div>
+    <div class="col-md-2"><%= link_to(t('collections'), '/collections') %></div>
   </div>
 </div> 
