--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -1,7 +1,7 @@
 <div id="header" class="container-fluid">
   <div class="row">
     <div class="col-md-6">
-      <p>TODO: logo</p>
+      <a href="/">TODO: logo</a>
     </div>
   </div>
   <div class="row">
