collections and exhibits tabs looking ok.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,4 +23,5 @@
 
 @import "locals/footer";
 @import "locals/header";
-@import "locals/home-index.css.scss"
+@import "locals/home-index";
+@import "locals/tabs";
