--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -11,17 +11,22 @@
       <div>
         <%= @collection.head_html.html_safe %>
       </div>
-      <% (@tabs.keys - ['extra', 'credits']).each do |tab| %>
-        <h2 class="tab"><%= link_to_unless(tab == params[:tab], tab.titlecase, tab) %></h2>
-      <% end %>
-      <div>
-        <%= @collection.tabs[params[:tab]].html_safe %>
+    </div>
+  </div>
+  <div class="row">
+    <% (@tabs.keys - ['extra', 'credits']).each do |tab| %>
+      <% is_current = tab == params[:tab] %>
+      <div class="tab col-md-2 <%= 'tab-current' if is_current %>">
+        <%= link_to_unless(is_current, tab.titlecase, tab) %>
       </div>
-      <div>
-        <%= @collection.tabs['extra'].html_safe %>
-      </div>
+    <% end %>
+  </div>
+  <div class="row">
+    <div>
+      <%= @collection.tabs[params[:tab]].html_safe %>
+    </div>
+    <div>
+      <%= @collection.tabs['extra'].html_safe %>
     </div>
   </div>
 </div>
-
-
