--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -22,10 +22,10 @@
     <% end %>
   </div>
   <div class="row">
-    <div>
+    <div class="col-md-12">
       <%= @collection.tabs[params[:tab]].html_safe %>
     </div>
-    <div>
+    <div class="col-md-12">
       <%= @collection.tabs['extra'].html_safe %>
     </div>
   </div>
