--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -16,7 +16,9 @@
       <p><%= link_to('Visiting the Archives', '/TODO') %></p>
     </ul>
     <div class="col-md-5">
-      Copyright 2015 WGBH Educational Foundation. All rights reserved.
+      <img src="/wgbh-logo.svg"><br/>
+      Copyright &copy; 2015 WGBH Educational Foundation<br/>
+      All rights reserved
     </div>
   </div>
 </div>    
