--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -5,6 +5,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
+      <a href="/collections"><%= t('collections') %></a>
       <h1>
         <%= @collection.title_html %>
       </h1>
