--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,14 +6,14 @@
       <p><b><%= link_to(t('collections'), '/collections') %></b></p>
     </ul>
     <ul class="col-md-3">
-      <p><%= link_to('About Us', '/TODO') %></p>
-      <p><%= link_to('Blog', '/TODO') %></p>
-      <p><%= link_to('Contact Us', '/TODO') %></p>
-      <p><%= link_to('Help', '/TODO') %></p>
-      <p><%= link_to('Credits', '/TODO') %></p>
-      <p><%= link_to('Privacy Policy', '/TODO') %></p>
-      <p><%= link_to('Terms and Conditions', '/TODO') %></p>
-      <p><%= link_to('Visiting the Archives', '/TODO') %></p>
+      <p><%= link_to('About Us', '/about') %></p>
+      <p><%= link_to('Blog', 'http://blog.openvault.wgbh.org/') %></p>
+      <p><%= link_to('Contact Us', '/contact-us') %></p>
+      <p><%= link_to('Help', '/help') %></p>
+      <p><%= link_to('Credits', '/credits') %></p>
+      <p><%= link_to('Privacy Policy', '/privacy-policy') %></p>
+      <p><%= link_to('Terms and Conditions', '/terms-and-conditions') %></p>
+      <p><%= link_to('Visiting the Archives', '/visiting the archives') %></p>
     </ul>
     <div class="col-md-5">
       <img src="/wgbh-logo.svg"><br/>
