--- a/app/assets/stylesheets/locals/header.css.scss
+++ b/app/assets/stylesheets/locals/header.css.scss
@@ -2,4 +2,10 @@
     background: $dark-blue;
     &, a { color: #FFF; }
     padding: 2em;
+    img,input {
+        width: 250px;
+    }
+    input {
+        color: #000;
+    }
 }
