Banner contents should not be fluid, though color should cover whole.

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,24 +1,26 @@
 <div id="footer" class="container-fluid">
-  <div class="row">
-    <ul class="col-md-4">
-      <p><b><%= link_to(t('series'), '/series') %></b></p>
-      <p><b><%= link_to(t('exhibits'), '/exhibits') %></b></p>
-      <p><b><%= link_to(t('collections'), '/collections') %></b></p>
-    </ul>
-    <ul class="col-md-3">
-      <p><%= link_to('About Us', '/about') %></p>
-      <p><%= link_to('Blog', 'http://blog.openvault.wgbh.org/') %></p>
-      <p><%= link_to('Contact Us', '/contact-us') %></p>
-      <p><%= link_to('Help', '/help') %></p>
-      <p><%= link_to('Credits', '/credits') %></p>
-      <p><%= link_to('Privacy Policy', '/privacy-policy') %></p>
-      <p><%= link_to('Terms and Conditions', '/terms-and-conditions') %></p>
-      <p><%= link_to('Visiting the Archives', '/visiting the archives') %></p>
-    </ul>
-    <div class="col-md-5">
-      <img src="/wgbh-logo.svg"><br/>
-      Copyright &copy; 2015 WGBH Educational Foundation<br/>
-      All rights reserved
+  <div class="container">
+    <div class="row">
+      <ul class="col-md-4">
+        <p><b><%= link_to(t('series'), '/series') %></b></p>
+        <p><b><%= link_to(t('exhibits'), '/exhibits') %></b></p>
+        <p><b><%= link_to(t('collections'), '/collections') %></b></p>
+      </ul>
+      <ul class="col-md-3">
+        <p><%= link_to('About Us', '/about') %></p>
+        <p><%= link_to('Blog', 'http://blog.openvault.wgbh.org/') %></p>
+        <p><%= link_to('Contact Us', '/contact-us') %></p>
+        <p><%= link_to('Help', '/help') %></p>
+        <p><%= link_to('Credits', '/credits') %></p>
+        <p><%= link_to('Privacy Policy', '/privacy-policy') %></p>
+        <p><%= link_to('Terms and Conditions', '/terms-and-conditions') %></p>
+        <p><%= link_to('Visiting the Archives', '/visiting the archives') %></p>
+      </ul>
+      <div class="col-md-5">
+        <img src="/wgbh-logo.svg"><br/>
+        Copyright &copy; 2015 WGBH Educational Foundation<br/>
+        All rights reserved
+      </div>
     </div>
-  </div>
-</div>    
+  </div>    
+</div>
