--- a/app/assets/stylesheets/locals/home-index.css.scss
+++ b/app/assets/stylesheets/locals/home-index.css.scss
@@ -2,6 +2,6 @@
     h2 {
         background: #F4BA54;
         a { color: $dark-blue; }
-        padding: 1em;
+        padding: 1em 0em; // no side padding, to avoid unnecessary line-wrapping in medium width.
     }
 }
