--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <a href="/"><img src="ov-logo.png"/></a>
+        <a href="/"><img src="/ov-logo.png"/></a>
         <br/><br/>
       </div>
     </div>
