--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -6,11 +6,18 @@
   <div class="row">
     <div class="col-md-12">
       <h1><%= t('collections') %></h1>
+    </div>
+  </div>
+  <div class="row">
       
       <% @collections.each do |path, collection| %>
-        <h2><%= link_to(collection.title, '/collections/' + collection.tab_path) %></h2>
+        <div class="col-md-4">
+          <a href="<%= '/collections/' + collection.tab_path %>">
+            <img src="<%= collection.img_src %>"/>
+            <h2><%= collection.title %></h2>
+          </a>
+        </div>
       <% end %>
       
-    </div>
   </div>
 </div>
