collections are sorting correctly.

--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -9,8 +9,6 @@
     </div>
   </div>
   <div class="row">
-    
-  <%= render partial: 'shared/grid', locals: {sets: @collections.values, path: 'collections'} %>
-      
+    <%= render partial: 'shared/grid', locals: {sets: @collections, path: 'collections'} %>  
   </div>
 </div>
