--- a/app/views/shared/_grid.html.erb
+++ b/app/views/shared/_grid.html.erb
@@ -1,6 +1,7 @@
 <% sets.each do |set| %>
   <div class="col-md-4 col-sm-6">
     <a href="<%= '/' + path + '/' + set.tab_path %>">
+      <!-- Sort order: <%= set.head_html.gsub('<p>', '').to_f %> -->
       <img src="<%= set.img_src %>"/>
       <h2><%= set.title %></h2>
     </a>
