--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,5 +23,5 @@
 
 @import "locals/header-footer";
 @import "locals/home";
-@import "locals/collections";
+@import "locals/collections-exhibits";
 @import "locals/tabs";
