--- a/app/assets/stylesheets/locals/collections-exhibits.css.scss
+++ b/app/assets/stylesheets/locals/collections-exhibits.css.scss
@@ -1,8 +1,7 @@
-.blacklight-collections-index {
+.blacklight-collections-index,.blacklight-exhibits-index {
     #main-container {
         img {
             width: 100%;
-            //height: 100%;
             margin-bottom: 0;
         }
         h2 {
