--- a/app/views/exhibits/index.html.erb
+++ b/app/views/exhibits/index.html.erb
@@ -6,11 +6,9 @@
   <div class="row">
     <div class="col-md-12">
       <h1><%= t('exhibits') %></h1>
-      
-      <% @exhibits.each do |path, exhibit| %>
-        <h2><%= link_to(exhibit.title, '/exhibits/' + exhibit.tab_path) %></h2>
-      <% end %>
-      
     </div>
+  </div>
+  <div class="row">
+    <%= render partial: 'shared/grid', locals: {sets: @exhibits, path: 'exhibits'} %>  
   </div>
 </div>
