--- a/app/assets/stylesheets/globals/defaults.css.scss
+++ b/app/assets/stylesheets/globals/defaults.css.scss
@@ -1,3 +1,4 @@
 html > body {
-    font-family: "Whitney SSm A", "Whitney SSm B", sans-serif;  
+    // TODO: "Whitney SSm A", "Whitney SSm B" ?
+    font-family: sans-serif;  
 }
