Magnifying glass on search. Not sure if this is the best way.

--- a/app/assets/stylesheets/locals/header-footer.css.scss
+++ b/app/assets/stylesheets/locals/header-footer.css.scss
@@ -6,6 +6,12 @@
     input {
         color: #000;
     }
+    form .glyphicon {
+        position: absolute;
+        color: #000;
+        left: 240px;
+        top: 7px;
+    }
 }
 
 #footer {
