--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -10,6 +10,7 @@
       <div class="col-md-6">
         <form action="/catalog">
           <input name="q" onchange="this.form.submit()"/>
+          <span class="glyphicon glyphicon-search"></span>
         </form>
       </div>
       <div class="col-md-2"><%= link_to(t('series'), '/series') %></div>
