--- a/app/views/override/show.erb
+++ b/app/views/override/show.erb
@@ -1,3 +1,8 @@
-<h1><%= @page_title %></h1>
-
-<%= @override.body_html.html_safe %>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12">
+      <h1><%= @page_title %></h1>
+      <%= @override.body_html.html_safe %>
+    </div>
+  </div>
+</div>
