--- a/app/assets/stylesheets/locals/collections-exhibits.css.scss
+++ b/app/assets/stylesheets/locals/collections-exhibits.css.scss
@@ -7,7 +7,8 @@
         .info {
            background-color: $yellow;
            color: $dark-blue;
-           padding: $grid-gutter-width*0.5 $grid-gutter-width;
+           padding: $grid-gutter-width*0.5 $grid-gutter-width*0.75;
+           // Left-right padding chosen such that AAPB fits in two lines.
            margin-top: 0;
            margin-bottom: $grid-gutter-width;
            h2 {
