--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -7,15 +7,15 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-sm-6">
         <form action="/catalog">
           <input name="q" onchange="this.form.submit()"/>
           <span class="glyphicon glyphicon-search"></span>
         </form>
       </div>
-      <div class="col-md-2"><%= link_to(t('series'), '/series') %></div>
-      <div class="col-md-2"><%= link_to(t('exhibits'), '/exhibits') %></div>
-      <div class="col-md-2"><%= link_to(t('collections'), '/collections') %></div>
+      <div class="col-sm-2"><%= link_to(t('series'), '/series') %></div>
+      <div class="col-sm-2"><%= link_to(t('exhibits'), '/exhibits') %></div>
+      <div class="col-sm-2"><%= link_to(t('collections'), '/collections') %></div>
     </div>
   </div>
 </div>
