homepage filler text.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,17 +12,17 @@
   <div class="row">
     <div class="col-md-4">
       <h2 class="text-center"><%= link_to(t('series'), '/series') %></h2>
-      <div>TODO: Lorem Ipsum</div>
+      <div>Browse titles in the WGBH Media Library and Archives collection.</div>
     </div>
 
     <div class="col-md-4">
       <h2 class="text-center"><%= link_to(t('exhibits'), '/exhibits') %></h2>
-      <div>TODO: Lorem Ipsum</div>
+      <div>Explore selected topics and digitized programs of historical significance curated by WGBH Mellon Scholars.</div>
     </div>
 
     <div class="col-md-4">
       <h2 class="text-center"><%= link_to(t('collections'), '/collections') %></h2>
-      <div>TODO: Lorem Ipsum</div>
+      <div>Check out collections of significant WGBH productions, including unique full-length interviews.</div>
     </div>
   </div>
 </div>
