Make it look more like the mock up.

--- a/app/assets/stylesheets/globals/colors.css.scss
+++ b/app/assets/stylesheets/globals/colors.css.scss
@@ -2,4 +2,5 @@ $dark-blue: #1A385C;
 $light-blue: #5776AD;
 $yellow: #F3BA53;
 $grey: #949599;
+$light-grey: #EEEFF1;
 $transparent: rgba(0, 0, 0, 0.4);
