--- a/app/assets/stylesheets/locals/tabs.css.scss
+++ b/app/assets/stylesheets/locals/tabs.css.scss
@@ -5,7 +5,7 @@
     background: $yellow;
     color: $dark-blue;
     &.tab-current {
-        background: $light-blue;
+        background: $medium-blue;
         color: #FFF;
     }
 }
