--- a/app/assets/stylesheets/globals/colors.css.scss
+++ b/app/assets/stylesheets/globals/colors.css.scss
@@ -1,5 +1,6 @@
 $dark-blue: #1A385C;
-$light-blue: #5776AD;
+$medium-blue: #5776AD;
+$light-blue: #C5CDDE;
 $yellow: #F3BA53;
 $grey: #949599;
 $light-grey: #EEEFF1;
