--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -1,8 +1,11 @@
+<%# Moved out of _search_header. %>
+<%= render 'constraints' %>
+
 <div id="sidebar">
   <%= render 'search_sidebar' %>
 </div>
 
-<div id="content" >
+<div id="content">
   <% unless has_search_parameters? %>
     <%# if there are no input/search related params, display the "home" partial -%>
     <%= render 'home' %>
