Params list spec not really clear.

--- a/app/assets/stylesheets/locals/catalog-index.css.scss
+++ b/app/assets/stylesheets/locals/catalog-index.css.scss
@@ -1,4 +1,16 @@
 .blacklight-catalog-index {
+    #appliedParams {
+        border: none;
+        background: none;
+        padding: $grid-gutter-width/2;
+        margin: 0px;
+        #startOverLink {
+            display: none;
+        }
+        .btn {
+            border-radius: 0px;
+        }
+    }
     #sidebar {
         background: $medium-blue;
         
