Decruft mobile view.

--- a/app/assets/stylesheets/locals/catalog-index.css.scss
+++ b/app/assets/stylesheets/locals/catalog-index.css.scss
@@ -1,4 +1,7 @@
 .blacklight-catalog-index {
+    #facets .top-panel-heading {
+        border: none; // Only matters on xs screen width.
+    }
     #appliedParams {
         border: none;
         background: none;
