--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -2,10 +2,15 @@
 <%= render 'constraints' %>
 
 <div id="sidebar">
-  <%= render 'search_sidebar' %>
+  <div class="container">
+    <div class="row">
+      <%= render 'search_sidebar' %>
+    </div>
+  </div>
 </div>
 
-<div id="content">
+<div id="content" class="container-fluid">
+  <%# Added container-fluid for a bit more padding so margins align. %>
   <% unless has_search_parameters? %>
     <%# if there are no input/search related params, display the "home" partial -%>
     <%= render 'home' %>
