Remove a little cruft.

--- a/app/assets/stylesheets/locals/catalog-index.css.scss
+++ b/app/assets/stylesheets/locals/catalog-index.css.scss
@@ -14,6 +14,9 @@
             display: none;
         }
     }
+    #sortAndPerPage {
+        border: none; // Default has line at bottom.
+    }
     #per_page-dropdown {
         display: none; // Not in spec.
     }
